2048/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: katt-2048
  namespace: katt-2048
spec:
  tls:
    certResolver: letsencrypt 
  entryPoints:
    - websecure
  routes:
  - match: Host(`2048.defn.ooo`)
    kind: Rule
    services:
    - name: katt-2048-mesh
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: katt-2048-mesh
  namespace: katt-2048
spec:
  type: ExternalName
  externalName: katt-2048.katt-2048.svc.cluster.local
  ports:
    - port: 80
